[project]
name = "union-status"
version = "0.1.0"
description = "macOS menu bar app for Union.ai cluster status"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flyte",
    "rumps>=0.4.0",
    "union-runtime>=0.1.15",
]

[project.scripts]
union-status = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
